# Novel

./: .editorconfig  .gitignore  AppHeader.tsx  LICENCE  README.md  docker-compose.yml  front.json  memo.md  useIsMobile.ts  views.py
.github/: pr-labeler.yml
back/: .envrc  Dockerfile  Pipfile  db.sqlite3  envDummy  error.md  initial_databse.sh  initial_script.sh  jwt.md  link.md  manage.py  memo.md  my.json  pyproject.toml  repo.py  schema.yaml  user.py
back/aa/: Pipfile
back/accounts/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py
back/accounts/migrations/: 0001_initial.py
back/accounts/tmp/: usermodel_sample.py
back/apiv1/: admin.py  memo.md  permissions.py  urls.py  views.py
back/apiv1/serializers/: CustomUser.py  Post.py  Profile.py  User.py  __init__.py
back/apiv1/tmp/: media.py  serializers.py  simpleView.py  views.py
back/apiv1/views/: __init__.py  post.py  profile.py  user.py
back/apiv1/views/gitFunction/: __init__.py  git.py
back/apiv1/views/tmp/: post.py
back/config/: urls.py  wsgi.py
back/config/settings/: base.py  local.py  production.py
back/fixture/: memo.md
back/novel/: models.py
back/pip/: Pipfile
back/posts/: admin.py  models.py
back/posts/migrations/: 0001_initial.py  0002_alter_post_post_content.py  0002_auto_20221025_0854.py
back/profiles/: models.py
back/profiles/migrations/: 0001_initial.py
back/snippets/: admin.py  models.py  serializers.py  urls.py  views.py
back/snippets/migrations/: 0001_initial.py
back/tmp/: Dockerfile_broken  jwt.md  requestdata.md  vercel.json
back/tutorial/: settings.py  urls.py
back/tutorial/settings/: base.py  local.py  production.py
front/: .babelrc  .dockerignore  .eslintrc.js  (+8 more)
(+85 files in other folders)
