[tool.poetry]
name = "Novel"
version = "0.1.0"
description = ""
authors = ["hedgehog <42014197+zutomayo147@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
# Django = "3.2.16"
django = "3.2.16"
djangorestframework = "3.12.0"
pygments = "==2.9.0"
djangorestframework-simplejwt = "4.6.0"
djoser = "2.1.0"
django-cors-headers = "3.13.0"
django-filter = "22.1"
# drf-yasg = "1.21.4"
rules = "3.3"
werkzeug = "2.2.2"
django-security = "0.12.0"
django-storages = "1.13.1"
drf-social-auth = "0.1.0"
django-rest-auth = "0.9.5"
django-allauth = "0.51.0"
Pillow = "9.2.0"
django-environ = "0.9.0"
pygraphviz = "^1.10"
# PyYAML = "6.0"
# django-model-utils = "^4.2.0"
# django-currentuser = "^0.5.3"
# celery = "^5.2.7"
# dotenv = "^0.0.5"
# pandas = "^1.5.0"
# guardian = "^0.2.1"
# dj-database-url = "^1.0.0"
# channels = "^3.0.5"
# nltk = "^3.7"
# gensim = "^4.2.0"
# sklearn = "^0.0"
django-model-utils = "4.2.0"
django-maintenance-mode = "0.16.3"
django-crispy-forms = "1.14.0"
crispy-bootstrap5 = "0.7"
drf-nested-routers = "0.93.4"
django-model2puml = "0.2.1"
Faker = "15.1.1"
django-dbbackup = "4.0.2"
Django = "3.2.16"
drf-writable-nested = "0.7.0"
django-simple-history = "3.1.1"

[tool.poetry.group.dev.dependencies]
django-extensions = "3.2.1"
drf-spectacular = "0.24.2"
drf-typed = "0.2.0"
django-stubs = "1.12.0"
django-debug-toolbar = "3.5.0"
djangorestframework-stubs = "1.7.0"
djangorestframework-types = "0.8.0"
dr-scaffold = "2.1.2"
django-seed = "0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"